[package]
name = "proximo-client"
version = "0.1.0"
authors = ["Martin Garton <garton@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.2"
tonic = { version = "0.1.1", features = ["tls", "tls-roots"] }
prost = "0.6"
futures = { version = "0.3" }
futures-core = "0.3"
futures-util = "0.3"
futures-executor = "0.3"
tokio = { version = "0.2", features = ["rt-core", "macros"] }

[build-dependencies]
tonic-build = { version = "0.1.1" }
