[package]
name = "proximo-client"
version = "0.1.0"
authors = ["Martin Garton <garton@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
async-stream = "0.3"
tonic = { version = "0.4", features = ["tls", "tls-roots"] }
prost = "0.7"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["rt"] }

[build-dependencies]
tonic-build = { version = "0.4" }
