[package]
name = "proximo-client"
version = "0.1.0"
authors = ["Martin Garton <garton@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
async-stream = "0.3"
futures = "0.3"
prost = "0.7"
tokio = { version = "1", features = ["rt"] }
tonic = { version = "0.4", features = ["tls", "tls-roots"] }

[build-dependencies]
tonic-build = { version = "0.4" }
